2003-3-5 DennisHayes <dennish@raytek.com>
	* Added values for enums
	* Stubbed and somewhat implmented Blend, ColorBlend, CustomLineCap


2003-3-2  DennisHayes <dennish@raytek.com>

	* Created changelog
	* updated copyrights to 2002/3
	* changed namespace from System.Drawing, System.Drawing.Drawing2d to System.Drawing.Drawing2D
	* cosmetic improvments

2002-10-13  DennisHayes <dennish@raytek.com>
	* Changed namespace from *2d to *2D
	* Changed comment header from system.Drawing to System.Drawing.Drawing2D

2002-9-2  DennisHayes <dennish@raytek.com>
	
	* AdjustableArrowCap.cs
	* Blend.cs
	* ColorBlend.cs
	* CombineMode.cs
	* CompostingMode.cs
	* CompostingQuality.cs
	* CoordinateSpace.cs
	* CustomLineCap.cs
	* DashCap.cs
	* DashStyle.cs
	* FillMode.cs
	* FlushIntention.cs
	* GraphicsContainer.cs
	* GraphicsPathIterator.cs
	* GraphicsState.cs
	* HatchBrush.cs
	* HatchStyle.cs
	* InterpolationMode.cs
	* LinearGradientBrush.cs
	* LinearGradientMode.cs
	* LineCap.cs
	* LineJoin.cs
	* MatrixOrder.cs
	* PathData.cs
	* PathGradientBrush.cs
	* PathPointType.cs
	* PenAligment.cs
	* PenType.cs
	* PixelOffsetMode.cs
	* QualityMode.cs
	* RegionData.cs
	* SmoothingMode.cs
	* WarpMode.cs
	* WrapMode.cs
	* Added null classes for most/all classes, Many stubs, and some implmentation

2002-9-2  DennisHayes <dennish@raytek.com>

	* Matrix.cs
	* Added stubs, implmentation

2002-9-2  DennisHayes <dennish@raytek.com>

	* GraphicsPath.cs
	* added stub needed for system.windows.forms

2002-01-06  Ravi Pratap  <ravi@ximian.com>

	* ChangeLog : Add.

	* Matrix.cs : MonoTODO everywhere.

	* TODOAttribute.cs : Add here too.